tests/NormalTests/paczka1/fuzzy1/77039033.err
Error in line 2: hQktWXRVC S942 91,5
Error in line 6: hQktWXRVC S207 -2,1
Error in line 7: A861 A612 77,1
Error in line 24: hQktWXRVC A861 34,4
Error in line 34: FPV2ERaXinf A861 119,6
Error in line 37: FPV2ERaXinf S942 44,1
